added functionality of performers routes first test
