# routes/index.js
@@ -7,6 +7,7 @@ router.use('/', require('./swagger'));
 router.use('/events', require('./events'));
 router.use('/participants', require('./participants'));
 router.use('/comments', require('./comments'));
+router.use('/performers', require('./performers'));
 
 router.get('/login', passport.authenticate('github'), (req, res) => {});
 
